--- a/AppCoin/package.json
+++ b/AppCoin/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.9",
-    "expo-modules-core": "^2.3.13",
+    "expo": "53.0.10",
+    "expo-modules-core": "~2.4.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
